CSS and Index Updated

--- a/portfolio/final-project/interview-1/index.html
+++ b/portfolio/final-project/interview-1/index.html
@@ -38,23 +38,143 @@
     </section>
 
     <section class="question-section">
-        <h3>How did you get into the industry?</h3>
+        <h3>When entering Custom Clothier Sales, what did you find challenging at first?</h3>
         <div class="info-card-l">
             <figure>
-                <img src="img/daniel-george-Q1.png" alt="">
-                <figcaption><p>"...very stylish parents..."</p></figcaption>
+                <img src="img/daniel-george-Q2.gif" alt="">
+                <figcaption><p>"...Technology..."</p></figcaption>
             </figure>
             <div class="p-container">
-                <p><em>S</em>ince his childhood, Daniel George had very stylish parents, furthermore since is fater usually dresses up 
-                    for business. In turn, Daniel as been exposed to Men’s styles and wears at an early age.
-                    Using this early experience, he first enters directly into the industry as a Sales Specialist and Brand 
-                    Ambassador in 1996 for Corneliani Suits.</p>
+                <p><em>T</em>echnology.</p>
+                <p>Due to being exposed to Men’s clothing from an early age, he didn’t have many challenges entering the 
+                sales aspect of it</p>
+                <p>Now, however, outside of sales, a challenge he has faced was more tech related and technical errors 
+                while running his own business, which have lead to some difficulties and delays before.</p>
+                <p>Now, however, outside of sales, a challenge he has faced was more tech related and technical errors 
+                    while running his own business, which have lead to some difficulties and delays before.</p>
+                <p>Now, however, outside of sales, a challenge he has faced was more tech related and technical errors 
+                    while running his own business, which have lead to some difficulties and delays before.</p>
             </div>
         </div>
     </section>
 
+    <section class="question-section">
+        <h3> When working with a client, what questions were the most difficult to answer?</h3>
+        <div class="info-card-r">
+            <figure>
+                <img src="img/daniel-george-Q3.png" alt="">
+                <figcaption><p>"...attempting to create a fit suit or shirt..."</p></figcaption>
+            </figure>
+            <div class="p-container">
+                <p><em>W</em>hen working with a client, what questions were the most difficult to 
+                    answer?</p>
+                <p>This can lead to difficulties attempting to create a fit suit or shirt.</p>
+            </div>
+        </div>
+    </section>
 
+    <section class="question-section">
+        <h3>What usually gets you motivated to sell a suit to a client?</h3>
+        <div class="info-card-l">
+            <figure>
+                <img src="img/daniel-george-Q4.png" alt="">
+                <figcaption><p>"...Being able to represent...the Daniel George clothing..."</p></figcaption>
+            </figure>
+            <div class="p-container">
+                <p><em>O</em>verall, the main thing that helps with motivation is the ability to represent Daniel George Custom 
+                    Clothier’s suits, in a variety of ways.</p>
+                <p>One of the main ways is by wearing the Suits made by Daniel George Custom Clothiers. Being able to 
+                    represent, like a brand ambassador, the Daniel George clothing, and with this, being able to recommend 
+                    different materials and colors over other available materials or colors, based on what the occasion is.</p>
+                <p>Adding on, it is also motivating to present Daniel George Clothiers through other presentations, more 
+                    specifically, Books. Being able to utilize handbooks and displays of a variety of different materials to show 
+                    comparisons and make suggestions of what would look the best based on the event or purpose.</p>
+                <p>Another aspect of this is the clients themselves. As long as both the clients and the clothiers show 
+                    respect, the fittings and interactions are smooth sailing.</p>
+            </div>
+        </div>
+    </section>
 
+    <section class="question-section">
+        <h3>What top tools should every suit salesman have in Clothing Selling?</h3>
+        <div class="info-card-r">
+            <figure>
+                <img src="img/daniel-george-Q5.png" alt="">
+                <figcaption><p>"...Knowledge..."</p></figcaption>
+            </figure>
+            <div class="p-container">
+                <p><em>K</em>nowledge</p>
+                <p>Being able to tell and know different kinds of quality of materials and knowing how to measure are key 
+                    important factors into being a Custom Clothiers Salesperson.</p>
+                <p>Being able to tell and know different kinds of quality of materials and knowing how to measure are key 
+                    important factors into being a Custom Clothiers Salesperson.</p>
+                <p>Furthermore, being able to address mistakes, as mistakes can occur, and letting clients know that 
+                    associates can make mistakes, and know how to measure or fix a situation to best suit the client’s needs 
+                    and wants.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="question-section">
+        <h3>In the Chicagoland area, there are several other Men’s Suit stores, such as 
+            Zeglio, Jacob Young Custom Clothiers, Montopoli Custom Clothiers, and Balani.</h3>
+        <h3>Is it important to know what other Custom Clothiers / Competitions offer?</h3>
+        <div class="info-card-l">
+            <figure>
+                <img src="img/daniel-george-Q6.png" alt="">
+                <figcaption><p>"... It is important as a Suits Salesman to know what each competition offers...."</p></figcaption>
+            </figure>
+            <div class="p-container">
+                <p><em>Y</em>es. It is important as a Suits Salesman to know what each competition offers.</p>
+                <p>Being able to compare qualities of materials, and knowing price ranges based on suits and clothing from 
+                    other competitors.</p>
+                <p>Another helpful tool to know Daniel George’s materials vs others are image galleries.</p>
+                <p>Usually on a custom clothier’s website, like Balani, there are image galleries displaying models and 
+                    representing their clothing. By using these, it helps know what the competitors have the offer, as the 
+                    image galleries help show what kind of quality and type of suits the competitors create.</p>
+                <p>However, outside of comparison, this is an additional reason to know the competitors.</p>
+                <p>That is when a sales person needs to recommend a competitor.</p>
+                <p>To clarify, if say timelines won’t meet or Daniel George sales representatives are booked to the brim with 
+                    clients, they might send a client to a competent competitor that they feel will get the job done well for a 
+                    client.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="question-section">
+        <h3>In your website, it states that during measurements, about 25+ 
+            measurements for Custom Suits (Custom Clothing/Custom Suiting).
+            Other websites vary slightly in terms of measuring amounts.</h3>
+        <h3>In your experience, are there a handful of measurements that a Suits Salesman 
+            should master when measuring someone for a suit?</h3>
+        <div class="info-card-r">
+            <figure>
+                <img src="img/daniel-george-Q7.png" alt="">
+                <figcaption><p>"...knowing a few measurements can help being able to determine other measurements..."</p></figcaption>
+            </figure>
+            <div class="p-container">
+                <p><em>I</em>mportant measurements to know would be how to measure the chest, the coat waist, and pants waist.</p>
+                <p>Though there are several more measurements that are equally as important, sometimes knowing a few 
+                    measurements can help being able to determine other measurements</p>
+                <p>Outside of this, a method, though not ideal, would be to figure out some measurements based on 
+                    weight and height alone, although this is highly not recommended since proportions might vary based 
+                    on each client, such as arm lengths, or disproportions in the body.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="question-section">
+        <h3></h3>
+        <div class="info-card-l">
+            <figure>
+                <img src="img/daniel-george-Q7.png" alt="">
+                <figcaption><p>"......"</p></figcaption>
+            </figure>
+            <div class="p-container">
+                <p><em></em></p>
+            </div>
+        </div>
+    </section>
 
   </div><!-- close "container" -->
   
