Daniel George Interview Site Created.

--- a/portfolio/final-project/interview-1/index.html
+++ b/portfolio/final-project/interview-1/index.html
@@ -164,14 +164,22 @@
     </section>
 
     <section class="question-section">
-        <h3></h3>
+        <h3>What are some pitfalls that you have experienced or seen as a Suit salesman, that a Customer 
+            Clothier salesman should watch out for?</h3>
         <div class="info-card-l">
             <figure>
-                <img src="img/daniel-george-Q7.png" alt="">
-                <figcaption><p>"......"</p></figcaption>
+                <img src="img/daniel-george-Q8.png" alt="">
+                <figcaption><p>"...Making sure that ordering a suit or clothing will sync up well within a certain timeline...."</p></figcaption>
             </figure>
             <div class="p-container">
-                <p><em></em></p>
+                <p><em>T</em>imelines.</p>
+                <p>Making sure that ordering a suit or clothing will sync up well within a certain timeline.</p>
+                <p>A prime example: A wedding deadline.</p>
+                <p>Say the groom orders a suit. The suit takes 9 weeks for it to arrive, henceforth, the suit should 
+                    arrive 2 weeks prior to the wedding.</p>
+                <p>The bride and groom end up leaving to Europe for the wedding 3 weeks prior to the wedding.</p>
+                <p>Well, the groom didn’t need the suit 2 weeks prior to the wedding, he needed it 3 weeks prior to 
+                    the wedding.</p>
             </div>
         </div>
     </section>
