index and CSS edited.
Almost ready to be a template.

--- a/portfolio/final-project/interview-1/index.html
+++ b/portfolio/final-project/interview-1/index.html
@@ -17,9 +17,21 @@
 
 <body>
 
-    <h1>Daniel George</h1>
-    <h2>Interview with a Sales Associate</h2>
+    <header>
+        <h1> - Daniel George - </h1>
+        <h2>An Interview with a Sales Associate</h2>
+    </header>
   <div id="container">
+    
+    <section id="introduction">
+        <p>There are hundreds, even thousands of different suits sold from a large variety of options, such as 
+            quality, purpose, and fitting.</p>
+        <p>But what is it like to sell a suit? To explain its quality, its purpose, and if it’ll be a good fit, both 
+            literally and occasionally?</p>
+            <p>Well, to help us understand these questions, Daniel George Custom Clothiers, a high-luxury custom and 
+            bespoke clothiers’ company, agreed to give us an insight.</p>
+            <p>By none other than Daniel George himself</p>
+    </section>
 
     <section class="question-section">
         <h3>How did you get into the industry?</h3>
@@ -116,7 +128,7 @@
     </section>
 
     <section class="question-section">
-        <h3>In the Chicagoland area, there are several other Men’s Suit stores, such as 
+        <h3 class="statement">In the Chicagoland area, there are several other Men’s Suit stores, such as 
             Zeglio, Jacob Young Custom Clothiers, Montopoli Custom Clothiers, and Balani.</h3>
         <h3>Is it important to know what other Custom Clothiers / Competitions offer?</h3>
         <div class="info-card-l">
@@ -142,7 +154,7 @@
     </section>
 
     <section class="question-section">
-        <h3>In your website, it states that during measurements, about 25+ 
+        <h3 class="statement">In your website, it states that during measurements, about 25+ 
             measurements for Custom Suits (Custom Clothing/Custom Suiting).
             Other websites vary slightly in terms of measuring amounts.</h3>
         <h3>In your experience, are there a handful of measurements that a Suits Salesman 
@@ -185,7 +197,9 @@
     </section>
 
   </div><!-- close "container" -->
-  
+    <footer>
+        <p>2023 &copy; Nehemiah Cedillo</p>
+    </footer>  
   <!-- Link to jQuery on Google CDN-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   
