--- a/portfolio/final-project/interview-1/index.html
+++ b/portfolio/final-project/interview-1/index.html
@@ -78,8 +78,8 @@
                 <figcaption><p>"...attempting to create a fit suit or shirt..."</p></figcaption>
             </figure>
             <div class="p-container">
-                <p><em>W</em>hen working with a client, what questions were the most difficult to 
-                    answer?</p>
+                <p><em>B</em>ased on his experience, questions that can be more difficult to answer are mainly ones from a client 
+                    who is overweight, or attempting to find a tight fit for a body-builder shaped client.</p>
                 <p>This can lead to difficulties attempting to create a fit suit or shirt.</p>
             </div>
         </div>
