--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,7 +50,7 @@
                     <li><a href="assignment-6/index.html">Assignment 6</a></li>
                     <li><a href="final-project/docs/topic-proposal.pdf">Topic Proposal</a></li>
                     <li><a href="final-project/interview-1/index.html">Research Interview 1</a></li>
-                    <li><a href="final-project/docs/daniel-george_interview.pdf">Research Interview 2</a></li>
+                    <li><a href="final-project/interview-2/index.html">Research Interview 2</a></li>
                     <li><a href="final-project/docs/daniel-george_interview.pdf">Research Interview 3</a></li>
                     <li><a href="final-project/creative-exploration/index.html">Creative Exploration</a></li>
                     <li><a href="final-project/docs/">Wireframe + Style Guide</a></li>
