--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,7 +51,7 @@
                     <li><a href="final-project/docs/topic-proposal.pdf">Topic Proposal</a></li>
                     <li><a href="final-project/interview-1/index.html">Research Interview 1</a></li>
                     <li><a href="final-project/interview-2/index.html">Research Interview 2</a></li>
-                    <li><a href="final-project/docs/daniel-george_interview.pdf">Research Interview 3</a></li>
+                    <li><a href="final-project/interview-3/index.html">Research Interview 3</a></li>
                     <li><a href="final-project/creative-exploration/index.html">Creative Exploration</a></li>
                     <li><a href="final-project/docs/">Wireframe + Style Guide</a></li>
                     <li><a href="final-project/docs/">Reflection</a></li>
