--- a/portfolio/final-project/interview-3/index.html
+++ b/portfolio/final-project/interview-3/index.html
@@ -24,7 +24,13 @@
   <div id="container">
     
     <section id="introduction">
-        <p></p>
+        <p>There are hundreds, even thousands of different suits sold from a large variety of options, such as 
+            quality, purpose, and fitting.</p>
+        <p>But what is it like to sell a suit? To explain its quality, its purpose, and if it’ll be a good fit, both 
+            literally and occasionally?</p>
+            <p>Well, to help us understand these questions, Montopoli Custom Clothiers, a high-luxury custom and 
+            bespoke clothiers’ company, agreed to give us an insight.</p>
+            <p>Given by Jeff Landis</p>
     </section>
 
     <section class="question-section">
@@ -32,7 +38,7 @@
         <h3>How did you get into the industry?</h3>
         <div class="info-card-r">
             <figure>
-                <img src="png" alt="">
+                <img src="img/montopoli-Q1.png" alt="">
                 <figcaption><p>"...a friend of a friend..."</p></figcaption>
             </figure>
             <div class="p-container">
@@ -49,7 +55,7 @@
         <h3>When entering Custom Clothier Sales, what did you find challenging at first?</h3>
         <div class="info-card-l">
             <figure>
-                <img src="png" alt="">
+                <img src="img/montopoli-Q2.png" alt="">
                 <figcaption><p>"...Finding new Clients..."</p></figcaption>
             </figure>
             <div class="p-container">
@@ -67,7 +73,7 @@
         <h3>When working with a client, what questions were the most difficult to answer?</h3>
         <div class="info-card-r">
             <figure>
-                <img src="png" alt="">
+                <img src="img/montopoli-Q3.png" alt="">
                 <figcaption><p>"... getting to know the client..."</p></figcaption>
             </figure>
             <div class="p-container">
@@ -86,7 +92,7 @@
         <h3>What usually gets you motivated to sell a suit to a client?</h3>
         <div class="info-card-l">
             <figure>
-                <img src="png" alt="">
+                <img src="img/montopoli-Q4.png" alt="">
                 <figcaption><p>"...compliments..."</p></figcaption>
             </figure>
             <div class="p-container">
@@ -103,7 +109,7 @@
         <h3>What top tools should every suit salesperson have in Clothing Selling?</h3>
         <div class="info-card-r">
             <figure>
-                <img src="png" alt="">
+                <img src="img/montopoli-Q5.png" alt="">
                 <figcaption><p>"...people rely on feedback..."</p></figcaption>
             </figure>
             <div class="p-container">
@@ -121,7 +127,7 @@
         <h3>What are some pitfalls that a Custom Clothier salesman should watch out for?</h3>
         <div class="info-card-l">
             <figure>
-                <img src="png" alt="">
+                <img src="img/montopoli-Q6.png" alt="">
                 <figcaption><p>"...Sticking to only one style. ..."</p></figcaption>
             </figure>
             <div class="p-container">
@@ -138,7 +144,7 @@
         <h3>Is it important to know what other Custom Clothiers / Competitions offer?</h3>
         <div class="info-card-r">
             <figure>
-                <img src="png" alt="">
+                <img src="img/montopoli-Q7.png" alt="">
                 <figcaption><p>"...What do you stand for...?"</p></figcaption>
             </figure>
             <div class="p-container">
@@ -156,7 +162,7 @@
         <h3>In your experience/opinion, are there a group or handful of specific measurements that a Suits Salesman should know and master when measuring someone for a suit? </h3>
         <div class="info-card-l">
             <figure>
-                <img src="png" alt="">
+                <img src="img/montopoli-Q8.png" alt="">
                 <figcaption><p>“...A proper fit not only takes the measurements, but how you interpret those measurements...”</p></figcaption>
             </figure>
             <div class="p-container">
@@ -174,7 +180,7 @@
         <h3>What are some difficulties that the salesperson can come across in out-of-store consultations?</h3>
         <div class="info-card-r">
             <figure>
-                <img src="png" alt="">
+                <img src="img/montopoli-Q9.png" alt="">
                 <figcaption><p>"...how to compartmentalize things..."</p></figcaption>
             </figure>
             <div class="p-container">
