--- a/portfolio/final-project/index.html
+++ b/portfolio/final-project/index.html
@@ -23,7 +23,7 @@
     <div class="parallax-border"></div>
 
     <!-- Section 1 -->
-    <section id="intro-section">
+    <section id="intro-section" class="info-box-section">
       <p>Put the introduction here.</p>
       <p>Maybe a couple sentences long</p>
       <p>I think about 3 or 4 is about the right amount for this</p>
@@ -36,26 +36,20 @@
       <figure class="interview-figure">
         <a href="">
           <img src="img/temp-img.png" alt="interview-image">
-          <caption>
-            <p>Daniel George</p>
-          </caption>
+          <p>Daniel George</p>
         </a>
       </figure>
 
       <figure class="interview-figure">
         <a href="">
           <img src="img/temp-img.png" alt="interview-image">
-          <caption>
-            <p>Optimo</p>
-          </caption>
+          <p>Optimo</p>
         </a>
       </figure>
       <figure class="interview-figure">
         <a href="">
           <img src="img/temp-img.png" alt="interview-image">
-          <caption>
-            <p>Montopoli</p>
-          </caption>
+          <p>Montopoli</p>
         </a>
       </figure>
     </section>
@@ -63,7 +57,7 @@
     <div class="parallax-border"></div>
 
     <!-- Section 3 -->
-    <section id="conclusion-section">
+    <section id="conclusion-section" class="info-box-section">
       <p>Conclusion</p>
     </section>
   </div><!-- close "container" -->
