Links connected. Parallax Image code added.

--- a/portfolio/final-project/index.html
+++ b/portfolio/final-project/index.html
@@ -20,46 +20,52 @@
     <img src="img/logo-temp-img.png" alt="logo-image">
   </header>
   <div id="container">
-    <div class="parallax-border"></div>
 
     <!-- Section 1 -->
-    <section id="intro-section" class="info-box-section">
-      <p>Put the introduction here.</p>
-      <p>Maybe a couple sentences long</p>
-      <p>I think about 3 or 4 is about the right amount for this</p>
-      <p>I think so. What do you think?</p>
-    </section>
-    <div class="parallax-border"></div>
+    <div class="parallax-img" id="parallax-image-1">
+      <section id="intro-section" class="info-box-section">
+        <p>Put the introduction here.</p>
+        <p>Maybe a couple sentences long</p>
+        <p>I think about 3 or 4 is about the right amount for this</p>
+        <p>I think so. What do you think?</p>
+      </section>
+    </div>
+    
+
 
     <!-- Section 2 -->
     <section id="interview-section">
       <figure class="interview-figure">
-        <a href="">
-          <img src="img/temp-img.png" alt="interview-image">
+        <a href="interview-1/index.html" id="interview-1-link">
+          <div class="interview-image"></div>
           <p>Daniel George</p>
         </a>
       </figure>
 
       <figure class="interview-figure">
-        <a href="">
-          <img src="img/temp-img.png" alt="interview-image">
+        <a href="interview-2/index.html" id="interview-2-link">
+          <div class="interview-image"></div>
           <p>Optimo</p>
         </a>
       </figure>
       <figure class="interview-figure">
-        <a href="">
-          <img src="img/temp-img.png" alt="interview-image">
+        <a href="interview-3/index.html" id="interview-3-link">
+          <div class="interview-image"></div>
           <p>Montopoli</p>
         </a>
       </figure>
     </section>
 
-    <div class="parallax-border"></div>
 
     <!-- Section 3 -->
-    <section id="conclusion-section" class="info-box-section">
-      <p>Conclusion</p>
-    </section>
+    <div class="parallax-img" id="parallax-image-2">
+      <section id="conclusion-section" class="info-box-section">
+        <p>Conclusion</p>
+      </section>
+    </div>
+    
+
+
   </div><!-- close "container" -->
 
   <footer>
