--- a/portfolio/final-project/index.html
+++ b/portfolio/final-project/index.html
@@ -19,6 +19,19 @@
   <header>
     <img src="img/logo-temp-img.png" alt="logo-image">
   </header>
+
+  <nav>
+    <img src="img/nav-icon-temp.png" alt="">
+    <div id="nav-box">
+      <ul>
+        <li>N</li>
+        <li>E</li>
+        <li>M</li>
+        <li>O</li>
+      </ul>
+    </div>
+  </nav>
+
   <div id="container">
 
     <!-- Section 1 -->
