--- a/portfolio/final-project/index.html
+++ b/portfolio/final-project/index.html
@@ -21,14 +21,12 @@
   </header>
 
   <nav>
-    <img src="img/nav-icon-temp.png" alt="">
+  <img src="img/nav-icon-temp.png" alt="">
     <div id="nav-box">
-      <ul>
-        <li>N</li>
-        <li>E</li>
-        <li>M</li>
-        <li>O</li>
-      </ul>
+      <a href="">N</a>
+      <a href="">E</a>
+      <a href="">M</a>
+      <a href="">O</a>
     </div>
   </nav>
 
