Navigation Under Construction

--- a/portfolio/final-project/index.html
+++ b/portfolio/final-project/index.html
@@ -1,3 +1,7 @@
+<!-- Credits -->
+<!-- Helped Recieved from W3Docs for anchor tags within a page -->
+<!--  - https://www.w3docs.com/snippets/html/how-to-create-an-anchor-link-to-jump-to-a-specific-part-of-a-page.html -->
+
 <!DOCTYPE html>
 
 <html>
@@ -20,17 +24,23 @@
     <img src="img/logo-temp-img.png" alt="logo-image">
   </header>
 
-  <nav>
-  <img src="img/nav-icon-temp.png" alt="">
-    <div id="nav-box">
-      <a href="">N</a>
-      <a href="">E</a>
-      <a href="">M</a>
-      <a href="">O</a>
-    </div>
-  </nav>
+  
 
   <div id="container">
+    <!-- <div id="navigation-div"> -->
+      <nav>
+        <img src="img/nav-icon-temp.png" alt="">
+        <div id="nav-box">
+          <a href="#intro-section">Introduction</a>
+          <a href="#conclusion-section">Conclusion</a>
+          <a href="#interview-section">The Interviews</a>
+          <a href="#interview-1-link">Daniel George</a>
+          <a href="#interview-2-link">Optimo</a>
+          <a href="#interview-3-link">Montopoli</a>
+        </div>
+      </nav>
+    <!-- </div> -->
+
 
     <!-- Section 1 -->
     <div class="parallax-img" id="parallax-image-1">
@@ -41,11 +51,12 @@
         <p>I think so. What do you think?</p>
       </section>
     </div>
-    
+
 
 
     <!-- Section 2 -->
     <section id="interview-section">
+      <h1>The Interviews</h1>
       <figure class="interview-figure">
         <a href="interview-1/index.html" id="interview-1-link">
           <div class="interview-image"></div>
@@ -74,7 +85,7 @@
         <p>Conclusion</p>
       </section>
     </div>
-    
+
 
 
   </div><!-- close "container" -->
