--- a/portfolio/final-project/index.html
+++ b/portfolio/final-project/index.html
@@ -55,8 +55,8 @@
 
 
     <!-- Section 2 -->
+    <h1 id="interview-section-title">The Interviews</h1>
     <section id="interview-section">
-      <h1>The Interviews</h1>
       <figure class="interview-figure">
         <a href="interview-1/index.html" id="interview-1-link">
           <div class="interview-image"></div>
