Icon images added. Navigation added to all pages.

--- a/portfolio/final-project/interview-1/index.html
+++ b/portfolio/final-project/interview-1/index.html
@@ -22,7 +22,22 @@
         <h2>An Interview with a Sales Associate</h2>
     </header>
   <div id="container">
-    
+    <!-- <div id="navigation-div"> -->
+        <nav>
+            <img src="img/nav-icon-temp.png" alt="">
+            <div id="nav-box">
+                <a href="../index.html">Home</a>
+                <a href="#question-1">Question 1</a>
+                <a href="#question-2">Question 2</a>
+                <a href="#question-3">Question 3</a>
+                <a href="#question-4">Question 4</a>
+                <a href="#question-5">Question 5</a>
+                <a href="#question-6">Question 6</a>
+                <a href="#question-7">Question 7</a>
+                <a href="#question-8">Question 8</a>
+            </div>
+          </nav>
+        <!-- </div> -->
     <section id="introduction">
         <p>There are hundreds, even thousands of different suits sold from a large variety of options, such as 
             quality, purpose, and fitting.</p>
@@ -33,7 +48,7 @@
             <p>By none other than Daniel George himself</p>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-1">
         <h3>How did you get into the industry?</h3>
         <div class="info-card-r">
             <figure>
@@ -49,7 +64,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section"  id="question-2">
         <h3>When entering Custom Clothier Sales, what did you find challenging at first?</h3>
         <div class="info-card-l">
             <figure>
@@ -70,7 +85,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section"  id="question-3">
         <h3> When working with a client, what questions were the most difficult to answer?</h3>
         <div class="info-card-r">
             <figure>
@@ -85,7 +100,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section"  id="question-4">
         <h3>What usually gets you motivated to sell a suit to a client?</h3>
         <div class="info-card-l">
             <figure>
@@ -107,7 +122,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section"  id="question-5">
         <h3>What top tools should every suit salesman have in Clothing Selling?</h3>
         <div class="info-card-r">
             <figure>
@@ -127,7 +142,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section"  id="question-6">
         <h3 class="statement">In the Chicagoland area, there are several other Men’s Suit stores, such as 
             Zeglio, Jacob Young Custom Clothiers, Montopoli Custom Clothiers, and Balani.</h3>
         <h3>Is it important to know what other Custom Clothiers / Competitions offer?</h3>
@@ -153,7 +168,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section"  id="question-7">
         <h3 class="statement">In your website, it states that during measurements, about 25+ 
             measurements for Custom Suits (Custom Clothing/Custom Suiting).
             Other websites vary slightly in terms of measuring amounts.</h3>
@@ -175,7 +190,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section"  id="question-8">
         <h3>What are some pitfalls that you have experienced or seen as a Suit salesman, that a Customer 
             Clothier salesman should watch out for?</h3>
         <div class="info-card-l">
