--- a/portfolio/final-project/interview-3/index.html
+++ b/portfolio/final-project/interview-3/index.html
@@ -22,7 +22,23 @@
         <h2>An Interview with a Sales Associate</h2>
     </header>
   <div id="container">
-    
+    <!-- <div id="navigation-div"> -->
+        <nav>
+            <img src="img/nav-icon-temp.png" alt="">
+            <div id="nav-box">
+                <a href="../index.html">Home</a>
+                <a href="#question-1">Question 1</a>
+                <a href="#question-2">Question 2</a>
+                <a href="#question-3">Question 3</a>
+                <a href="#question-4">Question 4</a>
+                <a href="#question-5">Question 5</a>
+                <a href="#question-6">Question 6</a>
+                <a href="#question-7">Question 7</a>
+                <a href="#question-8">Question 8</a>
+                <a href="#question-9">Question 9</a>
+            </div>
+          </nav>
+        <!-- </div> -->
     <section id="introduction">
         <p>There are hundreds, even thousands of different suits sold from a large variety of options, such as 
             quality, purpose, and fitting.</p>
@@ -33,7 +49,7 @@
             <p>Given by Jeff Landis</p>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-1">
         <!-- <h3 class="statement"></h3> -->
         <h3>How did you get into the industry?</h3>
         <div class="info-card-r">
@@ -50,7 +66,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section"  id="question-2">
         <!-- <h3 class="statement"></h3> -->
         <h3>When entering Custom Clothier Sales, what did you find challenging at first?</h3>
         <div class="info-card-l">
@@ -68,7 +84,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section"  id="question-3">
         <!-- <h3 class="statement"></h3> -->
         <h3>When working with a client, what questions were the most difficult to answer?</h3>
         <div class="info-card-r">
@@ -87,7 +103,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-4">
         <!-- <h3 class="statement"></h3> -->
         <h3>What usually gets you motivated to sell a suit to a client?</h3>
         <div class="info-card-l">
@@ -104,7 +120,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section"  id="question-5">
         <!-- <h3 class="statement"></h3> -->
         <h3>What top tools should every suit salesperson have in Clothing Selling?</h3>
         <div class="info-card-r">
@@ -122,7 +138,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-6">
         <!-- <h3 class="statement"></h3> -->
         <h3>What are some pitfalls that a Custom Clothier salesman should watch out for?</h3>
         <div class="info-card-l">
@@ -139,7 +155,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-7">
         <h3 class="statement">In the Chicagoland area, there are several other Men’s Suit stores, such as Zeglio, Jacob Young Custom Clothiers, Daniel George Custom Clothiers, and Balani.</h3>
         <h3>Is it important to know what other Custom Clothiers / Competitions offer?</h3>
         <div class="info-card-r">
@@ -157,7 +173,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-8">
         <h3 class="statement">In different clothier websites, they each take different numbers of measurements</h3>
         <h3>In your experience/opinion, are there a group or handful of specific measurements that a Suits Salesman should know and master when measuring someone for a suit? </h3>
         <div class="info-card-l">
@@ -175,7 +191,7 @@
         </div>
     </section>
     
-    <section class="question-section">
+    <section class="question-section" id="question-9">
         <h3 class="statement">As stated on the website, it mentions that it is possible to schedule an appointment for in-home appointments or outside locations. </h3>
         <h3>What are some difficulties that the salesperson can come across in out-of-store consultations?</h3>
         <div class="info-card-r">
