--- a/portfolio/final-project/interview-2/index.html
+++ b/portfolio/final-project/interview-2/index.html
@@ -22,14 +22,29 @@
         <h2>An Interview with a Sales Associate</h2>
     </header>
   <div id="container">
-    
+    <!-- <div id="navigation-div"> -->
+        <nav>
+            <img src="img/nav-icon-temp.png" alt="">
+            <div id="nav-box">
+                <a href="../index.html">Home</a>
+                <a href="#question-1">Question 1</a>
+                <a href="#question-2">Question 2</a>
+                <a href="#question-3">Question 3</a>
+                <a href="#question-4">Question 4</a>
+                <a href="#question-5">Question 5</a>
+                <a href="#question-6">Question 6</a>
+                <a href="#question-7">Question 7</a>
+                <a href="#question-8">Question 8</a>
+            </div>
+          </nav>
+        <!-- </div> -->
     <section id="introduction">
         <p>When it comes to hats, it seems simply straightforward. Find a hat, measure your head, see if it fits, and done, you now have a hat.</p>
         <p>But what about custom hats? Or Bespoke Hats? Are they as straightforward as well, especially when being a salesman in it?</p>
             <p>To obtain a perspective on this, I managed to get an interview with a Sales Representative at the Optimo Hat Makers, stationed in Chicago.</p>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-1">
         <h3>How did you get into the industry?</h3>
         <div class="info-card-r">
             <figure>
@@ -43,7 +58,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-2">
         <h3>When Entering Optimo, what did you find challenging at first?</h3>
         <div class="info-card-l">
             <figure>
@@ -59,7 +74,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-3">
         <h3> When working with a client, what questions were the most difficult to answer?</h3>
         <div class="info-card-r">
             <figure>
@@ -75,7 +90,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-4">
         <h3>What usually gets you motivated to sell a hat for a client?</h3>
         <div class="info-card-l">
             <figure>
@@ -89,7 +104,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section"  id="question-5">
         <h3>What top tools should a custom/bespoke hat salesman have in selling?</h3>
         <div class="info-card-r">
             <figure>
@@ -108,7 +123,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-6">
         <h3>What are some pitfalls that a Sales Representative should be aware of?</h3>
         <div class="info-card-l">
             <figure>
@@ -123,7 +138,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-7">
         <h3 class="statement">In the Chicagoland Area, there are a few other hat stores, such as The Goorin Bros, and Sid’s Clothing and Hats.</h3>
         <h3>Is It important to know what other hat companies have to offer?</h3>
         <div class="info-card-r">
@@ -139,7 +154,7 @@
         </div>
     </section>
 
-    <section class="question-section">
+    <section class="question-section" id="question-8">
         <h3 class="statement">In your website, it states that hat fitting is provided to ensure a proper fitting. </h3>
         <h3>Is the process usually straightforward in obtaining a perfect hat fitting?</h3>
         <div class="info-card-l">
