Reflection document created.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,7 +54,7 @@
                     <li><a href="final-project/interview-3/index.html">Research Interview 3</a></li>
                     <li><a href="final-project/creative-exploration/index.html">Creative Exploration</a></li>
                     <li><a href="final-project/docs/wireframe-style-sheet.pdf">Wireframe + Style Guide</a></li>
-                    <li><a href="final-project/docs/">Reflection</a></li>
+                    <li><a href="final-project/docs/reflection.pdf">Reflection</a></li>
                     <li><a href="final-project/index.html">Completion</a></li>
                 </ul>
             </nav>
