--- a/portfolio/final-project/interview-2/index.html
+++ b/portfolio/final-project/interview-2/index.html
@@ -24,7 +24,8 @@
   <div id="container">
     <!-- <div id="navigation-div"> -->
         <nav>
-            <img src="img/nav-icon-temp.png" alt="">
+            <img src="img/nav-icon-temp.png" alt="" id="nav-icon">
+           <img src="img/nav-icon-temp-turned.png" alt="" id="nav-icon-turned">
             <div id="nav-box">
                 <a href="../index.html">Home</a>
                 <a href="#question-1">Question 1</a>
@@ -183,7 +184,19 @@
   <!-- Write your jQuery code inside of the .ready() function below -->
   <script>
 $(document).ready(function() {
+    $("#nav-box").hide();
+      $("#nav-icon-turned").hide();
 
+      $("#nav-icon").click(function () {
+        $("#nav-box").show();
+        $("#nav-icon").hide();
+        $("#nav-icon-turned").show();
+      });
+      $("#nav-icon-turned").click(function () {
+        $("#nav-box").hide();
+        $("#nav-icon").show();
+        $("#nav-icon-turned").hide();
+      });
 
 
 
