--- a/portfolio/final-project/interview-1/index.html
+++ b/portfolio/final-project/interview-1/index.html
@@ -266,7 +266,7 @@
         $(document).ready(function () {
             $("#nav-box").hide();
             $("#nav-icon-turned").hide();
-
+// Error, reupdating
             $("#nav-icon").click(function () {
                 $("#nav-box").show();
                 $("#nav-icon").hide();
