Nav Icon, Logo, and Optimo Interview Icon
Navigation edited. Logo added, Optimo Interview Icon added

--- a/portfolio/final-project/index.html
+++ b/portfolio/final-project/index.html
@@ -20,27 +20,29 @@
 
 
 <body>
+  <!-- <div id="navigation-div"> -->
+    <nav>
+      <img src="img/nav-icon.png" alt="" id="nav-icon">
+      <img src="img/nav-icon-turned.png" alt="" id="nav-icon-turned">
+      <div id="nav-box">
+        <a href="#intro-section">Introduction</a>
+        <a href="#conclusion-section">Conclusion</a>
+        <a href="#interview-section">The Interviews</a>
+        <a href="#interview-1-link">Daniel George</a>
+        <a href="#interview-2-link">Optimo</a>
+        <a href="#interview-3-link">Montopoli</a>
+      </div>
+    </nav>
+  <!-- </div> -->
+
   <header>
-    <img src="img/logo-temp-img.png" alt="logo-image">
+    <img src="img/logo.png" alt="logo-image" id="logo-image">
   </header>
 
   
 
   <div id="container">
-    <!-- <div id="navigation-div"> -->
-      <nav>
-        <img src="img/nav-icon-temp.png" alt="" id="nav-icon">
-        <img src="img/nav-icon-temp-turned.png" alt="" id="nav-icon-turned">
-        <div id="nav-box">
-          <a href="#intro-section">Introduction</a>
-          <a href="#conclusion-section">Conclusion</a>
-          <a href="#interview-section">The Interviews</a>
-          <a href="#interview-1-link">Daniel George</a>
-          <a href="#interview-2-link">Optimo</a>
-          <a href="#interview-3-link">Montopoli</a>
-        </div>
-      </nav>
-    <!-- </div> -->
+    
 
 
     <!-- Section 1 -->
