--- a/portfolio/final-project/interview-1/index.html
+++ b/portfolio/final-project/interview-1/index.html
@@ -24,8 +24,8 @@
     <div id="container">
         <!-- <div id="navigation-div"> -->
         <nav>
-            <img src="img/nav-icon-temp.png" alt="" id="nav-icon">
-            <img src="img/nav-icon-temp-turned.png" alt="" id="nav-icon-turned">
+            <img src="img/nav-icon.png" alt="" id="nav-icon">
+            <img src="img/nav-icon-turned.png" alt="" id="nav-icon-turned">
             <div id="nav-box">
                 <a href="../index.html">Home</a>
                 <a href="#question-1">Question 1</a>
